--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Abdulkafi88.github.io/Movies/",
+  "homepage": "https://Abdulkafi88.github.io/movie/",
   "name": "movies",
   "private": true,
   "version": "0.0.0",
